<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.soartech</groupId>
    <artifactId>jsoar</artifactId>
    <version>4.0.3-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>JSoar is a pure Java implementation of the Soar kernel.</description>
    <url>https://github.com/soartech/jsoar</url>
    <licenses>
        <license>
            <name>BSD-3-Clause</name>
            <url>https://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Bob Marinier</name>
            <email>bob.marinier@soartech.com</email>
            <organization>SoarTech</organization>
            <organizationUrl>https://soartech.com/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/soartech/jsoar.git</connection>
        <developerConnection>scm:git:https://github.com/soartech/jsoar.git</developerConnection>
        <url>https://github.com/soartech/jsoar/tree/maven/</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <show>private</show>
                    <doclint>none</doclint>
                    <source>8</source>
                    <!-- if you don't want javadoc errors to fail the build, uncomment this
                    <failOnError>false</failOnError>
                    -->
                </configuration>
                <executions>
                  <execution>
                    <id>aggregate</id>
                    <goals>
                      <goal>aggregate</goal>
                    </goals>
                    <phase>install</phase>
                    <configuration>
                      <!-- Specific configuration for the aggregate report -->
                    </configuration>
                  </execution>
                  <execution>
                    <id>attach-javadocs</id>
                    <goals>
                      <goal>jar</goal>
                    </goals>
                  </execution>
                </executions>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-source-plugin</artifactId>
              <version>3.2.0</version>
              <executions>
                <execution>
                  <id>attach-sources</id>
                  <goals>
                    <goal>jar</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.0.0-M1</version><!--$NO-MVN-MAN-VER$-->
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>28.1-jre</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.29</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>soartech-internal</id>
            <url>https://nexus.soartech.com:8443/nexus/content/groups/internal/</url>
        </repository>
        <repository>
            <id>soartech-public</id>
            <url>https://nexus.soartech.com:8443/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>soartech-internal-snapshots</id>
            <url>https://nexus.soartech.com:8443/nexus/content/repositories/snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>soartech-public-snapshots</id>
            <url>https://nexus.soartech.com:8443/nexus/content/repositories/public-snapshots/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>soartech-internal-snapshots</id>
            <name>SoarTech Snapshots</name>
            <url>https://nexus.soartech.com:8443/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <!-- 
        <repository>
            <id>soartech-releases</id>
            <name>SoarTech Releases</name>
            <url>https://nexus.soartech.com:8443/nexus/content/repositories/releases/</url>
        </repository>
         -->
    </distributionManagement>

    <modules>
        <!-- <module>jsoar-build</module> only needed for uber jar, which shouldn't be used anyway -->
        <module>jsoar-core</module>
        <module>jsoar-debugger</module>
        <module>jsoar-demos</module>
        <module>jsoar-legilimens</module>
        <!-- <module>jsoar-ruby</module> -->
        <module>jsoar-soar2soar</module>
        <module>jsoar-soarunit</module>
        <module>jsoar-tcl</module>
    </modules>
</project>
